--- a/src/pages/Cadastro/Cadastro.css
+++ b/src/pages/Cadastro/Cadastro.css
@@ -7,33 +7,42 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
   gap: 1rem;
 }
 
 .conteudo-cadastro{
-  margin-bottom: -5rem;
-  width: 80vw;
-  background: rgba(0, 0, 0, 0.6);
   display: flex;
-  align-items: center;
-  border-radius: 1rem;
-  flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.39);
+    border-radius: 50px;
+    width: 50%;
+    height: 80%;
 }
-  
-  .conteudo-cad-cadastro .box-user-cadastro input {
-    width: 100%;
-    padding: 10px 0;
-    outline: none;
-    border: 0;
-    background: transparent;
-    border-bottom: 1px solid #fff;
-    color: #fff;
-    font-size: 16px;
-    margin-bottom: 30px;
+
+
+  .box-user-cadastro{
+    position: relative;
+    width: 50%;
+  }
+ 
+.input-cadastro{
+  width: 100%;
+  padding: 10px 0;
+  outline: none;
+  border: 0;
+  background: transparent;
+  border-bottom: 1px solid #fff;
+  color: #fff;
+  font-size: 16px;
+  margin-bottom: 30px;
   }
   
-  .conteudo-cadastro .box-user-cadastro label {
+  .label-cadastro {
+    position: absolute;
     top: 0;
     left: 0;
     padding: 10px 0;
@@ -43,14 +52,14 @@
     transition: .5s;
   }
   
-  .conteudo-cadastro .box-user-cadastro input:focus~label {
+  .box-user-cadastro:focus~label {
     top: -20px;
     left: 0;
     color: #3EAEF4;
     font-size: 0.9rem;
   }
   
-  .conteudo-cadastro .box-user-cadastro input:valid~label {
+  .box-user-cadastro:valid~label {
     top: -20px;
     left: 0;
     color: #3EAEF4;
@@ -58,12 +67,21 @@
   }
 
   .botao-login-cadastro{
-    height: 7vh;
+    background-color: transparent;
+    border: 1px solid white;
+    border-radius: 40px;
+    width: 45%;
+    height: 10%;
+    font-size: larger;
+    font-family: Poppins;
+    color: white;
   }
 
 
-/* 
-  @media only screen and (min-width: 992px) {
-    
-} */
+
+  @media only screen and (max-width: 600px) {
+ .conteudo-cadastro{
+  width: 100%;
+ }   
+}
   
