--- a/src/pages/Configuração/configuração.css
+++ b/src/pages/Configuração/configuração.css
@@ -1,5 +1,11 @@
+.config-container{
+    width: 100vw;
+    height: 100vh;
+    background-color: rgb(62, 104, 189);
+    color: white;
+}
+
 .config-div{
-    color: #0c0b0b;
     height: 15vh;
     width: 100vw;
     border-bottom: 1px solid black;
@@ -33,4 +39,8 @@
 .config1{
     width: 70%;
 
+}
+
+@media only screen and (max-width : 600px) {
+    
 }
