--- a/src/pages/Devoluções/Devolucoes.css
+++ b/src/pages/Devoluções/Devolucoes.css
@@ -1,37 +1,26 @@
-.container-sessoes{
-    height: 100vh;
-    width: 100vw;
+.container-devolucoes{
     display: flex;
-    align-items: center;
-    flex-direction: column;
     justify-content: center;
+    align-items: center;
     text-align: center;
     background-color: rgb(62, 104, 189);
+    width: 100vw;
+    height: 100vh;
 }
 
-.conteudo-sessoes{
-    color: white;
-    background-color: rgba(0, 0, 0, 0.39);
+.conteudo-devolucoes{
     display: flex;
+    justify-content: space-evenly;
     align-items: center;
     text-align: center;
-    justify-content: space-evenly;
     flex-direction: column;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.39);
     border-radius: 50px;
     width: 50%;
     height: 50%;
 }
-
-.input-sessoes{
-    background-color: transparent;
-    border: 2px solid white;
-    width: 40%;
-    height: 10%;
-    border-radius: 50px;
-    padding-left: 2%;
-    color: white;
-}
-.button-sessoes {
+.button-devolucoes {
     background-color: transparent;
     border: 1px solid white;
     border-radius: 40px;
@@ -42,15 +31,24 @@
     color: white;
 }
 
+.input-devolucoes{
+    background-color: transparent;
+    border: 2px solid white;
+    width: 40%;
+    height: 10%;
+    border-radius: 50px;
+    padding-left: 2%;
+    color: white;
+}
 
 @media screen and (max-width : 600px){
-    .conteudo-sessoes{
+    .conteudo-devolucoes{
         width: 100%;
     }
-    .input-sessoes{
+    .input-devolucoes{
         width: 70%;
     }
-    .button-sessoes{
+    .button-devolucoes{
         width: 80%;
     }
 }
